[project]
name = "drw-crypto-market-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=1.2",
    "beautifulsoup4>=4.9",
    "ipykernel>=6.0",
    "ipywidgets>=7.6",
    "japanize-matplotlib>=1.1.3",
    "joblib>=1.1",
    "jupyter-server>=2.0",
    "jupyterlab>=3.0",
    "jupyterlab-language-pack-ja-jp>=4.4.post0",
    "kaggle>=1.7.4",
    "lightgbm>=3.3",
    "matplotlib>=3.4",
    "numpy>=1.21",
    "optuna>=3.0",
    "pandas>=1.3",
    "plotly>=5.0",
    "pyarrow>=12.0",
    "pytorch-lightning>=1.6",
    "requests>=2.26",
    "scikit-learn>=1.0",
    "scikit-optimize>=0.9",
    "scipy>=1.7",
    "seaborn>=0.11",
    "tensorflow>=2.6",
    "torch>=1.10",
    "torchmetrics>=0.8",
    "transformers>=4.51",
    "xgboost>=1.5",
]
